@@ -1,3 +1,7 @@
+2011-01-25  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-misc.el: Enable highlight-symbol-mode in terminal.
+
 2011-01-19  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el (flymake-no-changes-timeout): Change from 0.5 to 5.0
